Fixed issues with browser zoom and broken layout on iOS Safari.
When zooming in the browser the projects layout breaks dramatically. Specifically the image previews with double or triple layouts. While not entirely fixed the problem only occurs at much higher zoom levels (150% or greater with a narrow browser window)

The layout issues on iOS Safari seems to be fixed entirely though.

--- a/scss/modules/_portfolioItem.scss
+++ b/scss/modules/_portfolioItem.scss
@@ -145,12 +145,12 @@
 }
 
 .project-image-buffer {
-  margin-left: 10px; 
+  margin-left: 0%; 
 }
 
 
 .project-image-buffer2 {
-  margin-left: 3px; 
+  margin-left: 0%; 
 }
 
 .image {
